feat: emoji util for application emoji