@@ -33,6 +33,7 @@ import org.json.JSONException;
 import org.json.JSONObject;
 import pw.chew.chewbotcca.objects.services.YouTubeVideo;
 import pw.chew.chewbotcca.util.DateTime;
+import pw.chew.chewbotcca.util.EmojiUtil;
 import pw.chew.chewbotcca.util.MiscUtil;
 import pw.chew.chewbotcca.util.PropertiesManager;
 import pw.chew.chewbotcca.util.ResponseHelper;
@@ -165,12 +166,12 @@ public class YouTubeCommand extends SlashCommand {
         if (video.getLikes() != null || video.getDislikes() != null) {
             String likes, dislikes;
             if (video.getLikes() == null || video.getDislikes() == null) {
-                likes = video.getLikes() == null ? "<:ytup:717600455580188683> Unknown" : String.format("<:ytup:717600455580188683> **%s**", MiscUtil.delimitNumber(video.getLikes()));
-                dislikes = video.getDislikes() == null ? "<:ytdown:717600455353696317> Unknown" : String.format("<:ytdown:717600455353696317> **%s**", MiscUtil.delimitNumber(video.getDislikes()));
+                likes = "%s %s".formatted(EmojiUtil.Emoji.YTUP.mention(), video.getLikes() == null ? "Unknown" : MiscUtil.delimitNumber(video.getLikes()));
+                dislikes = "%s %s".formatted(EmojiUtil.Emoji.YTDOWN.mention(), video.getDislikes() == null ? "Unknown" : MiscUtil.delimitNumber(video.getDislikes()));
             } else {
                 float totalLikes = video.getLikes() + video.getDislikes();
-                likes = String.format("<:ytup:717600455580188683> **%s** *(%s)*", MiscUtil.delimitNumber(video.getLikes()), MiscUtil.formatPercent(video.getLikes() / totalLikes));
-                dislikes = String.format("<:ytdown:717600455353696317> **%s** *(%s)*", MiscUtil.delimitNumber(video.getDislikes()), MiscUtil.formatPercent(video.getDislikes() / totalLikes));
+                likes = "%s **%s** *(%s)*".formatted(EmojiUtil.Emoji.YTUP.mention(), MiscUtil.delimitNumber(video.getLikes()), MiscUtil.formatPercent(video.getLikes() / totalLikes));
+                dislikes = "%s **%s** *(%s)*".formatted(EmojiUtil.Emoji.YTDOWN.mention(), MiscUtil.delimitNumber(video.getDislikes()), MiscUtil.formatPercent(video.getDislikes() / totalLikes));
             }
             embed.addField("Rating", likes + "\n" + dislikes, true);
         }
